--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -61,7 +61,7 @@
 
         android:textSize="20sp"
         android:id="@+id/btnWordOk"
-        android:onClick="onHelloBtnClick"
+        android:onClick="onOkBtnClick"
         android:text="I know">
 
     </Button>
