--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -27,8 +27,18 @@
             android:id="@+id/dashWord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
+            android:layout_gravity="top|left"
             android:text="Word"
+            android:layout_margin="30dp"
+            android:textSize="20sp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/dashTranslate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|left"
+            android:text="Translate"
             android:layout_margin="30dp"
             android:textSize="20sp">
         </TextView>
