--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -16,14 +16,24 @@
         android:layout_weight="1"
         android:layout_margin="10dp" >
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_gravity="start"
+            android:layout_margin="0dp"
+            app:srcCompat="@drawable/english3" />
 
-        <FrameLayout
+        <TableLayout
             android:id="@+id/frameLayoutCount"
             android:layout_width="wrap_content"
+            android:layout_gravity="top|right"
             android:layout_height="100dp"
             android:layout_margin="0dp"
-            android:padding="10dp">
 
+            android:padding="0dp">
+
+            <TableRow>
             <TextView
                 android:id="@+id/dashWordsToday"
                 android:layout_width="wrap_content"
@@ -35,6 +45,18 @@
                 android:textSize="20sp"></TextView>
 
             <TextView
+                android:id="@+id/dashWordsTodayCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|right"
+
+                android:padding="0dp"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="20sp"></TextView>
+        </TableRow>
+        <TableRow>
+            <TextView
                 android:id="@+id/dashWordsTodayBad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,36 +65,20 @@
                 android:text="Bad today:"
                 android:textColor="@color/red"
                 android:textSize="20sp"></TextView>
-
-            <TextView
-                android:id="@+id/dashWordsTodayCount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|right"
-                app:layout_constraintLeft_toLeftOf="@id/dashWordsToday"
-                android:padding="0dp"
-                android:text="100"
-                android:textColor="@color/black"
-                android:textSize="20sp"></TextView>
-
             <TextView
                 android:id="@+id/dashWordsTodayBadCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
                 android:padding="0dp"
-                android:text="8"
+                android:text="0"
                 android:textColor="@color/red"
                 android:textSize="20sp"></TextView>
-        </FrameLayout>
+            </TableRow>
+        </TableLayout>
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_gravity="end"
-            android:layout_margin="0dp"
-            app:srcCompat="@drawable/english3" />
+
+
 
     </FrameLayout>
 
