--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -99,7 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="top"
-            android:text="Word"
+            android:text=""
             android:fontFamily="sans-serif"
             android:textStyle="italic|bold"
             android:textSize="30sp"
@@ -112,7 +112,7 @@
             android:layout_height="50dp"
             android:layout_gravity="bottom"
             android:layout_margin="0dp"
-            android:text="Transcript"
+            android:text=""
             android:textSize="20sp"></TextView>
     </FrameLayout>
 
@@ -139,7 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|left"
-            android:text="Translate"
+            android:text=""
             android:layout_margin="0dp"
             android:textSize="20sp">
         </TextView>
